# BioMedics_archive

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  config_part_1.py  config_part_2.py  config_part_3.py  extract_measurements_from_brat.py  get_ner_with_eds_medic.py  knowledge.py  main.py  main.sh  main_part_1.py  main_part_2.py  main_part_3.py  main_with_parts.sh  pyproject.toml
SUPER_README/: README.md
biomedics/: __init__.py
biomedics/NER/: corpus_reader.py
biomedics/create_dataset/: create_dataset.py
biomedics/extract_measurement/: bio_lexical_variant.py  cleaner.py  config_extraction.cfg  main.py
biomedics/filter_df_for_study/: filter_df_for_study.py
biomedics/ner/: __init__.py  brat.py  evaluate.py  extract.py  loaders.py  reader.py  scorer.py
biomedics/normalization/coder_inference/: get_normalization_with_coder.py  main.py  text_preprocessor.py
biomedics/normalization/fuzzy/: __init__.py  main.py  normalisation.py
biomedics/run/: config_pipeline.yaml  full_pipeline.sh
biomedics/run/extract_measurement/: config_extraction.yaml  run.py
biomedics/run/ner/: evaluate.py  extract.sh
biomedics/run/ner/.dvc/tmp/: dag.md  lock
biomedics/run/ner/.dvc/tmp/hashes/local/: cache.db
biomedics/run/ner/.dvc/tmp/links/: cache.db
biomedics/run/normalization/: infer_coder.sh
biomedics/run/normalization/coder_inference/: infer_coder.sh  run.py  submit.py
biomedics/run/normalization/fuzzy/: run.py
biomedics/utils/: extract_pandas_from_brat.py  post_processing.py
complete_pipeline/: config.py  extract_measurement_parallel.py  get_normalization_with_coder.py
data/drug_knowledge/: CIS.csv  UMLS_CHEM.pkl  aiT_dict.pkl  datasource.md  dic_generation.py  final_dict.pkl
data/umls/: atc_cui_2023AB.pkl  lab_snomed_ct_2021AB.pkl
eds-medic/: README.md  changelog.md  dvc.yaml  infer.sh  mkdocs.yml  project.yml  pyproject.toml  readme.md  requirements-docs.txt  save.sh  test.sh  train.sh  utils.py
eds-medic/configs/: config.cfg
eds-medic/data/: train_test_split.ipynb
eds-medic/data/.ipynb_checkpoints/: small_generation-checkpoint.ipynb
eds-medic/docs/: annotation-guide.md  extractions.md  index.md  quickstart.md  resources.md  training.md  usage.md
eds-medic/docs/assets/termynal/: termynal.css
eds-medic/docs/scripts/: plugin.py
eds-medic/eds_medic/: __init__.py  evaluate.py
eds-medic/eds_medic/.ipynb_checkpoints/: corpus_reader-checkpoint.py
eds-medic/eds_medic/pipelines/: __init__.py  clean_entities.py
eds-medic/eds_medic/pipelines/.ipynb_checkpoints/: __init__-checkpoint.py
eds-medic/eds_medic/pipelines/doses/: factory.py  patterns.py
eds-medic/eds_medic/pipelines/drugs_normalizer/: __init__.py
eds-medic/eds_medic/pipelines/frequencies/: factory.py  frequencies.py
eds-medic/scripts/: Untitled.ipynb  evaluate.py  infer.py
eds-medic/scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  convert-checkpoint.py  new_evaluate-checkpoint.py
eds-medic/training/.ipynb_checkpoints/: test_metrics-checkpoint.json
notebooks/: evaluate_gold_std.ipynb  evaluate_on_full_pipe.ipynb  export_pandas_to_brat.ipynb  get_stats_by_section.ipynb  i2b2_comparison.ipynb  map_loinc_snomed.ipynb  prof_out.prof  test_measurment.ipynb
notebooks/.ipynb_checkpoints/: evaluate_gold_std-checkpoint.ipynb  evaluate_on_full_pipe-checkpoint.ipynb  export_pandas_to_brat-checkpoint.ipynb  get_filtered_bio_str_from_umls-checkpoint.ipynb  get_stats_by_section-checkpoint.ipynb  i2b2_comparison-checkpoint.ipynb
notebooks/figures/: histogram_nlp.html
notebooks/figures/maladie_de_takayasu/: histogram.html
notebooks/figures/syndrome_des_anti-phospholipides/: histogram.html
notebooks/figures/syndrome_des_anti-phospholipides/.ipynb_checkpoints/: histogram-checkpoint.html
preprocessing/create_dataset/: config.cfg  create_dataset.py
preprocessing/filter_df_for_study/: filter_df_for_study.py
scripts/extract_measurement/: run.py
scripts/ner/: dvc.yaml  infer.py  run.sh  train.py
scripts/ner/.dvc/tmp/md5s/: cache.db
scripts/normalization/coder_inference/: bio_config.py  bio_config.yml  infer_coder.sh  med_config.py  med_config.yml  run.py
scripts/normalization/fuzzy/: run.py
utils/: export_pandas_to_brat.py
utils/.ipynb_checkpoints/: text_preprocessor-checkpoint.py
