[tool.poetry]
name = "biomedics"
version = "0.1.0"
description = "Extracting and normalizing laboratory procedure mentions and drug mentions from raw clinical note"
authors = ["Aremaki <ad.remaki@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.7.6"
edsnlp = { version = "^0.11.1", extras = ["ml"] }
pandas = "^1.3"
altair = "^5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "0.3.5"
pre-commit = "^2.21.0"

[tool.ruff]
select = ["E", "F", "I", "W", "B", "RUF", "NPY", "PD", "ERA", "PTH", "SIM", "RET", "RSE", "T20", "PIE"]
ignore = ["E501", "B006", "B905", "B017", "W605", "RUF001", "RUF007", "RUF013", "NPY002", "PD901", "SIM118", "RET503"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".gitignore",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".pytest_cache",
    ".ipynb_checkpoints",
    "__pycache__",
    "__init__.py",
    "dist",
    "node_modules",
    "venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
